update comprehension list in Stats_IAA

--- a/Stats_IAA.ipynb
+++ b/Stats_IAA.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "source": [
     "from collections import Counter\n",
     "from itertools import combinations\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "source": [
     "# Change the file path\n",
     "baseline_path = \"./datatest/evaluation_sample/raw/baseline_IAA.txt\"\n",
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "source": [
     "# change the path to the folder containing each of the annotated files \n",
     "base_annots = \"./datatest/evaluation_sample/annotators/\"\n",
     "\n",
     "typesystem_file = \"TypeSystem.xml\"\n",
     "\n",
-    "xmi_files = [file for file in files for _,_,files in walk(base_annots) if file != \"TypeSystem.xml\"]\n",
+    "xmi_files = [file for _,_,files in walk(base_annots) for file in files if file != \"TypeSystem.xml\"]\n",
     "\n",
     "# opening of the typesystem necessary to interpret the XMI schema \n",
     "with open(base_annots + typesystem_file, 'rb') as f:\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "source": [
     "Docs = {}\n",
     "pairwise = {}\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "source": [
     "labels_ann = []\n",
     "dicts_coders = []\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "source": [
     "commune_mention = list(dict.fromkeys(commune_mention))\n",
     "\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "source": [
     "annotators = ['coder_1', 'coder_2', 'coder_3', 'coder_4']\n",
     "\n",
@@ -442,7 +442,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "source": [
     "columns_to_compare = annotators\n",
     "\n",
@@ -608,7 +608,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 14
     }
    ],
    "metadata": {}
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "source": [
     "columns_to_compare = annotators\n",
     "def check_all_not_equal(iterator):\n",
@@ -890,7 +890,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 62
+     "execution_count": 15
     }
    ],
    "metadata": {}
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "source": [
     "df_n = df.apply(pd.Series.value_counts, 1).fillna(0).astype(int)\n",
     "matrix = df_n.values\n",
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "source": [
     "# creation of the data structure for the establishment of the histogram \n",
     "dict_to_histogram = {\n",
@@ -1050,12 +1050,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "('INSTALLATION', [5, 7, 4, 8])\n",
+      "('ORGANISATION', [17, 15, 20, 19])\n",
       "('TITLE', [15, 17, 16, 15])\n",
       "('LOCATION', [60, 58, 58, 55])\n",
-      "('EVENT', [6, 2, 3, 1])\n",
       "('PERSON', [31, 32, 33, 32])\n",
-      "('ORGANISATION', [17, 15, 20, 19])\n",
-      "('INSTALLATION', [5, 7, 4, 8])\n"
+      "('EVENT', [6, 2, 3, 1])\n"
      ]
     }
    ],
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "source": [
     "# to be adapted according to the types of labels, the number of annotators  \n",
     " \n",
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "source": [
     "labels = ['LOCATION', 'PERSON', 'ORGANISATION', 'INSTALLATION', 'EVENT', 'TITLE']\n",
     "\n",
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "source": [
     "def plot_pies(tasks_to_pie):\n",
     "    \"\"\"Creation of a pie chart by class according to a report of agreement and disagreement by annotators \n",
@@ -1284,7 +1284,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.11 64-bit ('ner_stats': conda)"
+   "display_name": "Python 3.7.11 64-bit ('ner_tests': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1299,7 +1299,7 @@
    "version": "3.7.11"
   },
   "interpreter": {
-   "hash": "67eb06fafe0b13a4a0b54cc2417cd685161eb3def8d6a956601d9ad6ea80b621"
+   "hash": "f77f8922e0c36d1f69ea3eb0540d24cd0553a3e4e3baed1e359cab9c78f80d68"
   }
  },
  "nbformat": 4,
