--- a/Stats_golden_corpus.ipynb
+++ b/Stats_golden_corpus.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "source": [
     "import os\n",
     "\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "source": [
     "# Indiquer le chemin vers le fichier\n",
     "file_path = \"./datatest/sample/test/all.conll\"\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "source": [
     "sentences = 1\n",
     "sentences_annotated = 1\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "source": [
     "iob_df = pd.DataFrame(tags, columns=['Label'])\n",
     "iob_df = iob_df.value_counts().to_frame('Total').reset_index()\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "source": [
     "print(tokens[0:20])\n",
     "print(tags[0:20])\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "source": [
     "# We assume to set POS_TAGS with \"_\" value. By default, NLTK's CONLL Reader accepts three values ​​(Mention, POS, NER Tags)\n",
     "conlltags = [(token, \"_\", tg) for token, tg in zip(tokens, tags)]\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "source": [
     "original_text = []\n",
     "for subtree in ne_tree:\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "source": [
     "df_entities = pd.DataFrame(original_text, columns=['Mention', 'Label'])\n",
     "df_sum_labels = df_entities['Label'].value_counts().to_frame('Total').reset_index()\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "source": [
     "from IPython.display import display_html \n",
     "\n",
@@ -268,7 +268,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_16bfc_\" style='display:inline'>\n",
+       "<table id=\"T_e8394_\" style='display:inline'>\n",
        "  <caption>Total number of chunked labels</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
@@ -279,70 +279,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
-       "      <td id=\"T_16bfc_row0_col0\" class=\"data row0 col0\" >B-LOCATION</td>\n",
-       "      <td id=\"T_16bfc_row0_col1\" class=\"data row0 col1\" >903</td>\n",
+       "      <th id=\"T_e8394_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
+       "      <td id=\"T_e8394_row0_col0\" class=\"data row0 col0\" >B-LOCATION</td>\n",
+       "      <td id=\"T_e8394_row0_col1\" class=\"data row0 col1\" >903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
-       "      <td id=\"T_16bfc_row1_col0\" class=\"data row1 col0\" >I-ORGANISATION</td>\n",
-       "      <td id=\"T_16bfc_row1_col1\" class=\"data row1 col1\" >749</td>\n",
+       "      <th id=\"T_e8394_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
+       "      <td id=\"T_e8394_row1_col0\" class=\"data row1 col0\" >I-ORGANISATION</td>\n",
+       "      <td id=\"T_e8394_row1_col1\" class=\"data row1 col1\" >749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_16bfc_row2_col0\" class=\"data row2 col0\" >I-PERSON</td>\n",
-       "      <td id=\"T_16bfc_row2_col1\" class=\"data row2 col1\" >705</td>\n",
+       "      <th id=\"T_e8394_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_e8394_row2_col0\" class=\"data row2 col0\" >I-PERSON</td>\n",
+       "      <td id=\"T_e8394_row2_col1\" class=\"data row2 col1\" >705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
-       "      <td id=\"T_16bfc_row3_col0\" class=\"data row3 col0\" >I-TITLE</td>\n",
-       "      <td id=\"T_16bfc_row3_col1\" class=\"data row3 col1\" >678</td>\n",
+       "      <th id=\"T_e8394_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
+       "      <td id=\"T_e8394_row3_col0\" class=\"data row3 col0\" >I-TITLE</td>\n",
+       "      <td id=\"T_e8394_row3_col1\" class=\"data row3 col1\" >678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
-       "      <td id=\"T_16bfc_row4_col0\" class=\"data row4 col0\" >I-LOCATION</td>\n",
-       "      <td id=\"T_16bfc_row4_col1\" class=\"data row4 col1\" >605</td>\n",
+       "      <th id=\"T_e8394_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
+       "      <td id=\"T_e8394_row4_col0\" class=\"data row4 col0\" >I-LOCATION</td>\n",
+       "      <td id=\"T_e8394_row4_col1\" class=\"data row4 col1\" >605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
-       "      <td id=\"T_16bfc_row5_col0\" class=\"data row5 col0\" >B-PERSON</td>\n",
-       "      <td id=\"T_16bfc_row5_col1\" class=\"data row5 col1\" >490</td>\n",
+       "      <th id=\"T_e8394_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
+       "      <td id=\"T_e8394_row5_col0\" class=\"data row5 col0\" >B-PERSON</td>\n",
+       "      <td id=\"T_e8394_row5_col1\" class=\"data row5 col1\" >490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row6\" class=\"row_heading level0 row6\" >7</th>\n",
-       "      <td id=\"T_16bfc_row6_col0\" class=\"data row6 col0\" >B-TITLE</td>\n",
-       "      <td id=\"T_16bfc_row6_col1\" class=\"data row6 col1\" >355</td>\n",
+       "      <th id=\"T_e8394_level0_row6\" class=\"row_heading level0 row6\" >7</th>\n",
+       "      <td id=\"T_e8394_row6_col0\" class=\"data row6 col0\" >B-TITLE</td>\n",
+       "      <td id=\"T_e8394_row6_col1\" class=\"data row6 col1\" >355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
-       "      <td id=\"T_16bfc_row7_col0\" class=\"data row7 col0\" >B-ORGANISATION</td>\n",
-       "      <td id=\"T_16bfc_row7_col1\" class=\"data row7 col1\" >308</td>\n",
+       "      <th id=\"T_e8394_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
+       "      <td id=\"T_e8394_row7_col0\" class=\"data row7 col0\" >B-ORGANISATION</td>\n",
+       "      <td id=\"T_e8394_row7_col1\" class=\"data row7 col1\" >308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row8\" class=\"row_heading level0 row8\" >9</th>\n",
-       "      <td id=\"T_16bfc_row8_col0\" class=\"data row8 col0\" >I-INSTALLATION</td>\n",
-       "      <td id=\"T_16bfc_row8_col1\" class=\"data row8 col1\" >225</td>\n",
+       "      <th id=\"T_e8394_level0_row8\" class=\"row_heading level0 row8\" >9</th>\n",
+       "      <td id=\"T_e8394_row8_col0\" class=\"data row8 col0\" >I-INSTALLATION</td>\n",
+       "      <td id=\"T_e8394_row8_col1\" class=\"data row8 col1\" >225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row9\" class=\"row_heading level0 row9\" >10</th>\n",
-       "      <td id=\"T_16bfc_row9_col0\" class=\"data row9 col0\" >I-EVENT</td>\n",
-       "      <td id=\"T_16bfc_row9_col1\" class=\"data row9 col1\" >186</td>\n",
+       "      <th id=\"T_e8394_level0_row9\" class=\"row_heading level0 row9\" >10</th>\n",
+       "      <td id=\"T_e8394_row9_col0\" class=\"data row9 col0\" >I-EVENT</td>\n",
+       "      <td id=\"T_e8394_row9_col1\" class=\"data row9 col1\" >186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row10\" class=\"row_heading level0 row10\" >11</th>\n",
-       "      <td id=\"T_16bfc_row10_col0\" class=\"data row10 col0\" >B-INSTALLATION</td>\n",
-       "      <td id=\"T_16bfc_row10_col1\" class=\"data row10 col1\" >93</td>\n",
+       "      <th id=\"T_e8394_level0_row10\" class=\"row_heading level0 row10\" >11</th>\n",
+       "      <td id=\"T_e8394_row10_col0\" class=\"data row10 col0\" >B-INSTALLATION</td>\n",
+       "      <td id=\"T_e8394_row10_col1\" class=\"data row10 col1\" >93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_16bfc_level0_row11\" class=\"row_heading level0 row11\" >12</th>\n",
-       "      <td id=\"T_16bfc_row11_col0\" class=\"data row11 col0\" >B-EVENT</td>\n",
-       "      <td id=\"T_16bfc_row11_col1\" class=\"data row11 col1\" >71</td>\n",
+       "      <th id=\"T_e8394_level0_row11\" class=\"row_heading level0 row11\" >12</th>\n",
+       "      <td id=\"T_e8394_row11_col0\" class=\"data row11 col0\" >B-EVENT</td>\n",
+       "      <td id=\"T_e8394_row11_col1\" class=\"data row11 col1\" >71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_f2dd1_\" style='display:inline'>\n",
+       "<table id=\"T_132fa_\" style='display:inline'>\n",
        "  <caption>Total number of entities per NER class</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
@@ -353,34 +353,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_f2dd1_row0_col0\" class=\"data row0 col0\" >LOCATION</td>\n",
-       "      <td id=\"T_f2dd1_row0_col1\" class=\"data row0 col1\" >903</td>\n",
+       "      <th id=\"T_132fa_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_132fa_row0_col0\" class=\"data row0 col0\" >LOCATION</td>\n",
+       "      <td id=\"T_132fa_row0_col1\" class=\"data row0 col1\" >903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_f2dd1_row1_col0\" class=\"data row1 col0\" >PERSON</td>\n",
-       "      <td id=\"T_f2dd1_row1_col1\" class=\"data row1 col1\" >493</td>\n",
+       "      <th id=\"T_132fa_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_132fa_row1_col0\" class=\"data row1 col0\" >PERSON</td>\n",
+       "      <td id=\"T_132fa_row1_col1\" class=\"data row1 col1\" >493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_f2dd1_row2_col0\" class=\"data row2 col0\" >TITLE</td>\n",
-       "      <td id=\"T_f2dd1_row2_col1\" class=\"data row2 col1\" >364</td>\n",
+       "      <th id=\"T_132fa_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_132fa_row2_col0\" class=\"data row2 col0\" >TITLE</td>\n",
+       "      <td id=\"T_132fa_row2_col1\" class=\"data row2 col1\" >364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_f2dd1_row3_col0\" class=\"data row3 col0\" >ORGANISATION</td>\n",
-       "      <td id=\"T_f2dd1_row3_col1\" class=\"data row3 col1\" >327</td>\n",
+       "      <th id=\"T_132fa_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_132fa_row3_col0\" class=\"data row3 col0\" >ORGANISATION</td>\n",
+       "      <td id=\"T_132fa_row3_col1\" class=\"data row3 col1\" >327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_f2dd1_row4_col0\" class=\"data row4 col0\" >INSTALLATION</td>\n",
-       "      <td id=\"T_f2dd1_row4_col1\" class=\"data row4 col1\" >96</td>\n",
+       "      <th id=\"T_132fa_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_132fa_row4_col0\" class=\"data row4 col0\" >INSTALLATION</td>\n",
+       "      <td id=\"T_132fa_row4_col1\" class=\"data row4 col1\" >96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f2dd1_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_f2dd1_row5_col0\" class=\"data row5 col0\" >EVENT</td>\n",
-       "      <td id=\"T_f2dd1_row5_col1\" class=\"data row5 col1\" >73</td>\n",
+       "      <th id=\"T_132fa_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_132fa_row5_col0\" class=\"data row5 col0\" >EVENT</td>\n",
+       "      <td id=\"T_132fa_row5_col1\" class=\"data row5 col1\" >73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -420,10 +420,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.11 64-bit ('ner_stats': conda)"
+   "display_name": "Python 3.7.11 64-bit ('ner_tests': conda)"
   },
   "interpreter": {
-   "hash": "67eb06fafe0b13a4a0b54cc2417cd685161eb3def8d6a956601d9ad6ea80b621"
+   "hash": "f77f8922e0c36d1f69ea3eb0540d24cd0553a3e4e3baed1e359cab9c78f80d68"
   }
  },
  "nbformat": 4,
