rename files in datatest

--- a/Stats_golden_corpus.ipynb
+++ b/Stats_golden_corpus.ipynb
@@ -268,7 +268,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_e8394_\" style='display:inline'>\n",
+       "<table id=\"T_47863_\" style='display:inline'>\n",
        "  <caption>Total number of chunked labels</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
@@ -279,70 +279,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
-       "      <td id=\"T_e8394_row0_col0\" class=\"data row0 col0\" >B-LOCATION</td>\n",
-       "      <td id=\"T_e8394_row0_col1\" class=\"data row0 col1\" >903</td>\n",
+       "      <th id=\"T_47863_level0_row0\" class=\"row_heading level0 row0\" >1</th>\n",
+       "      <td id=\"T_47863_row0_col0\" class=\"data row0 col0\" >B-LOCATION</td>\n",
+       "      <td id=\"T_47863_row0_col1\" class=\"data row0 col1\" >903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
-       "      <td id=\"T_e8394_row1_col0\" class=\"data row1 col0\" >I-ORGANISATION</td>\n",
-       "      <td id=\"T_e8394_row1_col1\" class=\"data row1 col1\" >749</td>\n",
+       "      <th id=\"T_47863_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
+       "      <td id=\"T_47863_row1_col0\" class=\"data row1 col0\" >I-ORGANISATION</td>\n",
+       "      <td id=\"T_47863_row1_col1\" class=\"data row1 col1\" >749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_e8394_row2_col0\" class=\"data row2 col0\" >I-PERSON</td>\n",
-       "      <td id=\"T_e8394_row2_col1\" class=\"data row2 col1\" >705</td>\n",
+       "      <th id=\"T_47863_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_47863_row2_col0\" class=\"data row2 col0\" >I-PERSON</td>\n",
+       "      <td id=\"T_47863_row2_col1\" class=\"data row2 col1\" >705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
-       "      <td id=\"T_e8394_row3_col0\" class=\"data row3 col0\" >I-TITLE</td>\n",
-       "      <td id=\"T_e8394_row3_col1\" class=\"data row3 col1\" >678</td>\n",
+       "      <th id=\"T_47863_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
+       "      <td id=\"T_47863_row3_col0\" class=\"data row3 col0\" >I-TITLE</td>\n",
+       "      <td id=\"T_47863_row3_col1\" class=\"data row3 col1\" >678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
-       "      <td id=\"T_e8394_row4_col0\" class=\"data row4 col0\" >I-LOCATION</td>\n",
-       "      <td id=\"T_e8394_row4_col1\" class=\"data row4 col1\" >605</td>\n",
+       "      <th id=\"T_47863_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
+       "      <td id=\"T_47863_row4_col0\" class=\"data row4 col0\" >I-LOCATION</td>\n",
+       "      <td id=\"T_47863_row4_col1\" class=\"data row4 col1\" >605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
-       "      <td id=\"T_e8394_row5_col0\" class=\"data row5 col0\" >B-PERSON</td>\n",
-       "      <td id=\"T_e8394_row5_col1\" class=\"data row5 col1\" >490</td>\n",
+       "      <th id=\"T_47863_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
+       "      <td id=\"T_47863_row5_col0\" class=\"data row5 col0\" >B-PERSON</td>\n",
+       "      <td id=\"T_47863_row5_col1\" class=\"data row5 col1\" >490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row6\" class=\"row_heading level0 row6\" >7</th>\n",
-       "      <td id=\"T_e8394_row6_col0\" class=\"data row6 col0\" >B-TITLE</td>\n",
-       "      <td id=\"T_e8394_row6_col1\" class=\"data row6 col1\" >355</td>\n",
+       "      <th id=\"T_47863_level0_row6\" class=\"row_heading level0 row6\" >7</th>\n",
+       "      <td id=\"T_47863_row6_col0\" class=\"data row6 col0\" >B-TITLE</td>\n",
+       "      <td id=\"T_47863_row6_col1\" class=\"data row6 col1\" >355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
-       "      <td id=\"T_e8394_row7_col0\" class=\"data row7 col0\" >B-ORGANISATION</td>\n",
-       "      <td id=\"T_e8394_row7_col1\" class=\"data row7 col1\" >308</td>\n",
+       "      <th id=\"T_47863_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
+       "      <td id=\"T_47863_row7_col0\" class=\"data row7 col0\" >B-ORGANISATION</td>\n",
+       "      <td id=\"T_47863_row7_col1\" class=\"data row7 col1\" >308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row8\" class=\"row_heading level0 row8\" >9</th>\n",
-       "      <td id=\"T_e8394_row8_col0\" class=\"data row8 col0\" >I-INSTALLATION</td>\n",
-       "      <td id=\"T_e8394_row8_col1\" class=\"data row8 col1\" >225</td>\n",
+       "      <th id=\"T_47863_level0_row8\" class=\"row_heading level0 row8\" >9</th>\n",
+       "      <td id=\"T_47863_row8_col0\" class=\"data row8 col0\" >I-INSTALLATION</td>\n",
+       "      <td id=\"T_47863_row8_col1\" class=\"data row8 col1\" >225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row9\" class=\"row_heading level0 row9\" >10</th>\n",
-       "      <td id=\"T_e8394_row9_col0\" class=\"data row9 col0\" >I-EVENT</td>\n",
-       "      <td id=\"T_e8394_row9_col1\" class=\"data row9 col1\" >186</td>\n",
+       "      <th id=\"T_47863_level0_row9\" class=\"row_heading level0 row9\" >10</th>\n",
+       "      <td id=\"T_47863_row9_col0\" class=\"data row9 col0\" >I-EVENT</td>\n",
+       "      <td id=\"T_47863_row9_col1\" class=\"data row9 col1\" >186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row10\" class=\"row_heading level0 row10\" >11</th>\n",
-       "      <td id=\"T_e8394_row10_col0\" class=\"data row10 col0\" >B-INSTALLATION</td>\n",
-       "      <td id=\"T_e8394_row10_col1\" class=\"data row10 col1\" >93</td>\n",
+       "      <th id=\"T_47863_level0_row10\" class=\"row_heading level0 row10\" >11</th>\n",
+       "      <td id=\"T_47863_row10_col0\" class=\"data row10 col0\" >B-INSTALLATION</td>\n",
+       "      <td id=\"T_47863_row10_col1\" class=\"data row10 col1\" >93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e8394_level0_row11\" class=\"row_heading level0 row11\" >12</th>\n",
-       "      <td id=\"T_e8394_row11_col0\" class=\"data row11 col0\" >B-EVENT</td>\n",
-       "      <td id=\"T_e8394_row11_col1\" class=\"data row11 col1\" >71</td>\n",
+       "      <th id=\"T_47863_level0_row11\" class=\"row_heading level0 row11\" >12</th>\n",
+       "      <td id=\"T_47863_row11_col0\" class=\"data row11 col0\" >B-EVENT</td>\n",
+       "      <td id=\"T_47863_row11_col1\" class=\"data row11 col1\" >71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_132fa_\" style='display:inline'>\n",
+       "<table id=\"T_d6ec2_\" style='display:inline'>\n",
        "  <caption>Total number of entities per NER class</caption>\n",
        "  <thead>\n",
        "    <tr>\n",
@@ -353,34 +353,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_132fa_row0_col0\" class=\"data row0 col0\" >LOCATION</td>\n",
-       "      <td id=\"T_132fa_row0_col1\" class=\"data row0 col1\" >903</td>\n",
+       "      <th id=\"T_d6ec2_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_d6ec2_row0_col0\" class=\"data row0 col0\" >LOCATION</td>\n",
+       "      <td id=\"T_d6ec2_row0_col1\" class=\"data row0 col1\" >903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_132fa_row1_col0\" class=\"data row1 col0\" >PERSON</td>\n",
-       "      <td id=\"T_132fa_row1_col1\" class=\"data row1 col1\" >493</td>\n",
+       "      <th id=\"T_d6ec2_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_d6ec2_row1_col0\" class=\"data row1 col0\" >PERSON</td>\n",
+       "      <td id=\"T_d6ec2_row1_col1\" class=\"data row1 col1\" >493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_132fa_row2_col0\" class=\"data row2 col0\" >TITLE</td>\n",
-       "      <td id=\"T_132fa_row2_col1\" class=\"data row2 col1\" >364</td>\n",
+       "      <th id=\"T_d6ec2_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_d6ec2_row2_col0\" class=\"data row2 col0\" >TITLE</td>\n",
+       "      <td id=\"T_d6ec2_row2_col1\" class=\"data row2 col1\" >364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_132fa_row3_col0\" class=\"data row3 col0\" >ORGANISATION</td>\n",
-       "      <td id=\"T_132fa_row3_col1\" class=\"data row3 col1\" >327</td>\n",
+       "      <th id=\"T_d6ec2_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_d6ec2_row3_col0\" class=\"data row3 col0\" >ORGANISATION</td>\n",
+       "      <td id=\"T_d6ec2_row3_col1\" class=\"data row3 col1\" >327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_132fa_row4_col0\" class=\"data row4 col0\" >INSTALLATION</td>\n",
-       "      <td id=\"T_132fa_row4_col1\" class=\"data row4 col1\" >96</td>\n",
+       "      <th id=\"T_d6ec2_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_d6ec2_row4_col0\" class=\"data row4 col0\" >INSTALLATION</td>\n",
+       "      <td id=\"T_d6ec2_row4_col1\" class=\"data row4 col1\" >96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_132fa_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_132fa_row5_col0\" class=\"data row5 col0\" >EVENT</td>\n",
-       "      <td id=\"T_132fa_row5_col1\" class=\"data row5 col1\" >73</td>\n",
+       "      <th id=\"T_d6ec2_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_d6ec2_row5_col0\" class=\"data row5 col0\" >EVENT</td>\n",
+       "      <td id=\"T_d6ec2_row5_col1\" class=\"data row5 col1\" >73</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
